--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport"   content="initial-scale=1,user-scalable=no,width=device-width">
     <title>Homyz</title>
-    <link rel="stylesheet" href="/Style/style.css">
+    <link rel="stylesheet" href="Style/style.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -53,7 +53,7 @@
                 </p>
                 <div class="serch-box">
                     <div>
-                        <img src="/images/Untitled-2w 1.png" alt="location ico" height="50">
+                        <img src="images/Untitled-2w 1.png" alt="location ico" height="50">
                     </div>
                     <div class="find--button">Find Your Property</div>
                     <div class="srch-btn"><a href="#">Search</a></div>
@@ -79,7 +79,7 @@
             </div>
             <div class="image-elips">
                 <div class="elips">
-                    <img src="/images/house.png" alt="image">
+                    <img src="images/house.png" alt="image">
                 </div>
             </div>
 
@@ -88,7 +88,7 @@
     <section class="about">
         <div class="container">
             <div class="image">
-                <img src="/images/e.png" alt="lo">
+                <img src="images/e.png" alt="lo">
             </div>
             <div class="content">
                 <h2>Our value</h2>
@@ -102,22 +102,22 @@
                 </p>
                 <div class="listmain_container">
                     <div class="list">
-                        <img src="/images/logo vector.png" alt="con section zbout">
+                        <img src="images/logo vector.png" alt="con section zbout">
                         <div>Best Interest Rate on Market </div>
                         <a href="#">Know More</a>
                     </div>
                     <div class="list">
-                        <img src="/images/logo vector.png" alt="con section zbout">
+                        <img src="images/logo vector.png" alt="con section zbout">
                         <div>Best Interest Rate on Market </div>
                         <a href="#">Know More</a>
                     </div>
                     <div class="list">
-                        <img src="/images/logo vector.png" alt="con section zbout">
+                        <img src="images/logo vector.png" alt="con section zbout">
                         <div>Best Interest Rate on Market </div>
                         <a href="#">Know More</a>
                     </div>
                     <div class="list">
-                        <img src="/images/logo vector.png" alt="con section zbout">
+                        <img src="images/logo vector.png" alt="con section zbout">
                         <div>Best Interest Rate on Market </div>
                         <a href="#">Know More</a>
                     </div>
@@ -126,10 +126,10 @@
             
         </div>
         <div class="brand">
-            <img class="brands-icons" src="/images/Group 14.png" alt="brands" >
-            <img class="brands-icons" src="/images/Group 14.png" alt="brands" >
-            <img class="brands-icons" src="/images/Group 14.png" alt="brands" >
-            <img class="brands-icons" src="/images/Group 14.png" alt="brands" >
+            <img class="brands-icons" src="images/Group 14.png" alt="brands" >
+            <img class="brands-icons" src="images/Group 14.png" alt="brands" >
+            <img class="brands-icons" src="images/Group 14.png" alt="brands" >
+            <img class="brands-icons" src="images/Group 14.png" alt="brands" >
         </div>
     </section>
     <!-- brand -->
@@ -144,7 +144,7 @@
             </div>
             <div class="wrap">
                 <div class="resorts-details">
-                    <img src="/images/Frame 15.jpg" alt="plots">
+                    <img src="images/Frame 15.jpg" alt="plots">
                     <div class="cash"><span>$</span>23909 </div>
                     <div class="resortname"> Mountain Resort
                     </div>
@@ -152,7 +152,7 @@
                         Obcaecati.</p>
                 </div>
                 <div class="resorts-details">
-                    <img src="/images/Frame 15.jpg" alt="plots">
+                    <img src="images/Frame 15.jpg" alt="plots">
                     <div class="cash"><span>$</span>23909 </div>
                     <div class="resortname"> Mountain Resort
                     </div>
@@ -160,7 +160,7 @@
                         Obcaecati.</p>
                 </div>
                 <div class="resorts-details">
-                    <img src="/images/Frame 15.jpg" alt="plots">
+                    <img src="images/Frame 15.jpg" alt="plots">
                     <div class="cash"><span>$</span>23909 </div>
                     <div class="resortname"> Mountain Resort
                     </div>
@@ -188,7 +188,7 @@
                         <div class="box">
                             <div class="icon">
                                 <span>
-                                    <img src="/images/logo vector.png" alt="">
+                                    <img src="images/logo vector.png" alt="">
                                 </span>
                                 <div class="number">
                                     <p class="call">Call</p>
@@ -200,7 +200,7 @@
                         <div class="box">
                             <div class="icon">
                                 <span>
-                                    <img src="/images/logo vector.png" alt="">
+                                    <img src="images/logo vector.png" alt="">
                                 </span>
                                 <div class="number">
                                     <p class="call">Chat</p>
@@ -212,7 +212,7 @@
                         <div class="box">
                             <div class="icon">
                                 <span>
-                                    <img src="/images/logo vector.png" alt="">
+                                    <img src="images/logo vector.png" alt="">
                                 </span>
                                 <div class="number">
                                     <p class="call">Video</p>
@@ -224,7 +224,7 @@
                         <div class="box">
                             <div class="icon">
                                 <span>
-                                    <img src="/images/logo vector.png" alt="">
+                                    <img src="images/logo vector.png" alt="">
                                 </span>
                                 <div class="number">
                                     <p class="call">Mail</p>
@@ -238,7 +238,7 @@
 
             <!-- ................................................ -->
             <div class="contact-img-elips">
-                <img src="/images/Rectangle 13.png" alt="">
+                <img src="images/Rectangle 13.png" alt="">
             </div>
         </div>
         <!-- .............................. -->
@@ -263,7 +263,7 @@
     <footer>
         <div class="container">
             <div class="wrap1">
-                <img src="/images/logo.png" alt="">
+                <img src="images/logo.png" alt="">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo eum porro cumque accusantium
                     ad
                     modi ratione nisi eligendi commodi dolores dolor sunt placeat, saepe animi nihil, fugiat
@@ -280,15 +280,15 @@
             <div class="wrap3">
                 <h4>Social Links</h4>
                 <div>
-                    <img src="/images/location.png" alt="">
+                    <img src="images/location.png" alt="">
                     <span>Meenakshi Tower, Eranjipalam, Calicut, 673025</span>
                 </div>
                 <div>
-                    <img src="/images/solar_phone-bold.png" alt="">
+                    <img src="images/solar_phone-bold.png" alt="">
                     <span>+91 5321 562 157, +91 9561 236 123</span>
                 </div>
                 <div>
-                    <img src="/images/eva_email-fill.png" alt="">
+                    <img src="images/eva_email-fill.png" alt="">
                     <span>homyz"gmail.com</span>
                 </div>
             </div>
@@ -296,7 +296,7 @@
     </footer>
 
     
-    <script src="/script/script.js"></script>
+    <script src="script/script.js"></script>
 
 </body>
 
