--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport"   content="initial-scale=1,user-scalable=no,width=device-width">
     <title>Homyz</title>
-    <link rel="stylesheet" href="Style/style.css">
+    <link rel="stylesheet" href="/Style/style.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
