--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Header -->
     <header>
         <div class="container">
-            <a class="icon" href="#"><img src="/images/logo.png" alt="logo"></a>
+            <a class="icon" href="#"><img src="images/logo.png" alt="logo"></a>
             <span class="material-symbols-outlined menu-btn" onclick="togglenav()">
                 menu
             </span>
